# photoferry

./: .gitignore  Cargo.toml  README.md  build.rs
docs/operations/: safe-rerun-recovery.md
docs/plans/: 2026-02-21-feat-basic-import-loop-plan.md  2026-02-21-feat-cli-polish-hardening-plan.md  2026-02-21-feat-phase-3b-live-photo-albums-manifest-plan.md  2026-02-21-feat-verify-command-plan.md
docs/solutions/: import-risk-mitigations.md
docs/testing/: integration-smoke-test.md
scripts/: smoke_integration.sh  takeout_download.py
src/: display.rs  downloader.rs  importer.rs  main.rs  manifest.rs  metadata.rs  notify.rs  sidecar.rs  takeout.rs
swift/: Package.swift
swift/Sources/: PhotoFerrySwift.swift
