[package]
name = "photoferry"
version = "0.1.0"
edition = "2024"
description = "Google Photos → iCloud migration CLI. Handles Takeout zips, metadata preservation, and PhotoKit import."
license = "MIT"
repository = "https://github.com/terry-li-hm/photoferry"
homepage = "https://github.com/terry-li-hm/photoferry"
keywords = ["photos", "migration", "icloud", "google-photos", "macos"]
categories = ["command-line-utilities"]

[[bin]]
name = "photoferry"
path = "src/main.rs"

[dependencies]
anyhow = "1"
aes = "0.8"
cbc = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
owo-colors = "4"
pbkdf2 = { version = "0.12", default-features = false }
reqwest = { version = "0.12", features = ["blocking"] }
rusqlite = "0.31"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
sha2 = "0.10"
swift-rs = "1.0"
walkdir = "2"
zip = "2"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
swift-rs = { version = "1.0", features = ["build"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
